[gd_scene load_steps=6 format=2]

[ext_resource path="res://car0.png" type="Texture" id=1]
[ext_resource path="res://Car_Scirpt.gd" type="Script" id=2]
[ext_resource path="res://headlight.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.5, 5.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9.5, 7 )

[node name="Car" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 1.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
z_index = 1
texture = ExtResource( 1 )

[node name="Car_Collider" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionCar" type="CollisionShape2D" parent="Car_Collider"]
position = Vector2( 15, 2.23 )
scale = Vector2( 0.213, 0.297 )
shape = SubResource( 2 )

[node name="PlayerCollider" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 5

[node name="CollisionPlayer" type="CollisionShape2D" parent="PlayerCollider"]
position = Vector2( 1, 1 )
scale = Vector2( 1, 0.749 )
shape = SubResource( 2 )

[node name="Headlight" type="Light2D" parent="."]
visible = false
position = Vector2( 31, 2 )
scale = Vector2( 1.82, 1.07143 )
texture = ExtResource( 3 )
color = Color( 1, 0.952941, 0.811765, 1 )
energy = 1.5

[connection signal="body_entered" from="Car_Collider" to="." method="_on_Car_Collider_body_entered"]
[connection signal="body_entered" from="PlayerCollider" to="." method="_on_PlayerCollider_body_entered"]
